smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/defaults/default-missing-value.smithy
// Parse error at line 8, column 1 near `}\n`: Expected a valid identifier character, but found '}'
$version: "2.0"

namespace com.foo

structure Foo {
    bar: String =
}
